--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -5,7 +5,7 @@
       <name>{/device}</name>
       <config>
       <?if {/device = /hostnames/node}?>
-        <hostname xmlns="urn:ios">{hostnames//hostname_new}</hostname>
+        <hostname xmlns="urn:ios">{/hostname_new}</hostname>
       <?end?>
       </config>
     </device>
