--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -6,7 +6,7 @@
       <config>
       <?foreach {/hostnames}?>
         <?if {/device = node}?>
-          <hostname xmlns="urn:ios">{current(hostname_new)}</hostname>
+          <hostname xmlns="urn:ios">{current()}</hostname>
         <?end?>
       <?end?>
       </config>
