--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -4,10 +4,8 @@
     <device>
       <name>{/device}</name>
       <config>
-      <?foreach {/hostnames}?>
-        <?if {/device = node}?>
-          <hostname xmlns="urn:ios">{hostname_new}</hostname>
-        <?end?>
+      <?for /hostnames;{/device = hostnames/node}?>
+        <hostname xmlns="urn:ios">{hostnames/hostname_new}</hostname>
       <?end?>
       </config>
     </device>
