--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -1,8 +1,9 @@
 <config-template xmlns="http://tail-f.com/ns/config/1.0"
                  servicepoint="lab">
   <devices xmlns="http://tail-f.com/ns/ncs">
+  <?foreach {/devices}?>
     <device>
-      <name>{/device}</name>
+      <name>{.}</name>
       <config>
       <?foreach {/hostnames}?>
         <?if . = node?>
@@ -12,4 +13,5 @@
       </config>
     </device>
   </devices>
+  <?end?>
 </config-template>
