--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -1,17 +1,15 @@
 <config-template xmlns="http://tail-f.com/ns/config/1.0"
                  servicepoint="lab">
   <devices xmlns="http://tail-f.com/ns/ncs">
-    <?foreach {/devices}?>
-      <device>
-        <name>{.}</name>
-        <config>
-        <?foreach {/hostnames}?>
-          <?if {. = node}?>
-            <hostname xmlns="urn:ios">{hostname_new}</hostname>
-          <?end?>
+    <device>
+      <name>{/device}</name>
+      <config>
+      <?foreach {/hostnames}?>
+        <?if {/devices/device == node}?>
+          <hostname xmlns="urn:ios">{hostname_new}</hostname>
         <?end?>
-        </config>
-      </device>
-    <?end?>
+      <?end?>
+      </config>
+    </device>
   </devices>
 </config-template>
