--- a/lab/templates/lab-template.xml
+++ b/lab/templates/lab-template.xml
@@ -5,8 +5,10 @@
       <device>
         <name>{.}</name>
         <config>
-          <?if {. = /hostnames/node}?>
-          <hostname xmlns="urn:ios">{/hostnames/./hostname_new}</hostname>
+          <?foreach{/hostnames}?>
+            <?if {. = node}?>
+              <hostname xmlns="urn:ios">YAY</hostname>
+            <?end?>
           <?end?>
         </config>
       </device>
