--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -1,20 +1,114 @@
 <config-template xmlns="http://tail-f.com/ns/config/1.0"
                  servicepoint="GC">
   <devices xmlns="http://tail-f.com/ns/ncs">
+  <?foreach {/devices}?>
+  <?set device = {.}?>
     <device>
-      <!--
-          Select the devices from some data structure in the service
-          model. In this skeleton the devices are specified in a leaf-list.
-          Select all devices in that leaf-list:
-      -->
-      <name>{/device}</name>
+      <name>{$device}</name>
       <config>
-        <!--
-            Add device-specific parameters here.
-            In this skeleton the service has a leaf "dummy"; use that
-            to set something on the device e.g.:
-            <ip-address-on-device>{/dummy}</ip-address-on-device>
-        -->
+        <?if {$device = /transport-information/options/settings/equipment-information/PE/hostname}?>
+				  <vrf xmlns="http://tail-f.com/ned/cisco-ios-xr">
+            <?if {/service-information/network-options/protocol = 'vpnv4'}?>
+				  	  <vrf-list>
+				  	  	<name>{/service-information/network-options/vpnv4/vrf}</name>
+				  	  	<rd>{/service-information/network-options/vpnv4/route-distinguisher}</rd>
+				  	  	<address-family>
+				  	  		<ipv4>
+				  	  			<unicast>
+				  	  				<import>
+				  	  					<route-target>
+				  	  						<address-list>
+				  	  							<name>{/service-information/network-options/vpnv4/route-target-import}</name>
+				  	  						</address-list>
+				  	  					</route-target>
+				  	  				</import>
+				  	  				<export>
+				  	  					<route-target>
+				  	  						<address-list>
+				  	  							<name>{/service-information/network-options/vpnv4/route-target-export}</name>
+				  	  						</address-list>
+				  	  					</route-target>
+				  	  				</export>
+				  	  			</unicast>
+				  	  		</ipv4>
+				  	  	</address-family>
+				  	  </vrf-list>
+            <?end?>
+				  </vrf>
+					<interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
+						<GigabitEthernet-subinterface>
+							<GigabitEthernet>
+                <?foreach{/transport-information/options/settings/equipment-information/PE}?>
+                  <?if {$device = hostname}?>
+								    <id>{service-interface}</id>
+                  <?end?>
+                <?end?>
+								<encapsulation>
+									<dot1q>
+										<vlan-id>{/transport-information/options/settings/circuit-information/fttx/cvlan}</vlan-id>
+									</dot1q>
+								</encapsulation>
+								<?if {/service-information/network-options/protocol = 'vpnv4'}?>
+									<vrf>{/service-information/network-options/vpnv4/vrf}</vrf>
+								<?end?>
+								<ipv4>
+								  <address>
+                    <?foreach{/service-information/service-options/ip-settings/ip/ipv4/hosts}?>
+                      <?if {$device = node}?>
+								  	    <ip>{address}</ip>
+								  	    <mask>{subnet-mask}</mask>
+                      <?end?>
+                    <?end?>
+								  </address>
+								</ipv4>
+							</GigabitEthernet>
+						</GigabitEthernet-subinterface>
+					</interface>
+					<router xmlns="http://tail-f.com/ned/cisco-ios-xr">
+            <?if {service-information/service-options/ip-settings/routing/protocol = 'bgp'}?>
+              <?foreach{/service-information/service-options/ip-settings/routing/bgp/peer}?>
+                <?if {$device = node}?>
+						      <bgp>
+						      	<bgp-no-instance>
+						      		<id>{local-asn}</id>
+						      		<vrf>
+						      			<name>{string(/service-information/network-options/vpnv4/vrf)}</name>
+						      			<address-family>
+						      				<ipv4>
+						      					<unicast/>
+						      				</ipv4>
+						      			</address-family>
+						      			<neighbor>
+						      				<id>{remote-address}</id>
+						      				<remote-as>{remote-asn}</remote-as>
+						      				<update-source>
+						      					<GigabitEthernet-subinterface>
+						      						<GigabitEthernet>{/update-source}</GigabitEthernet>
+						      					</GigabitEthernet-subinterface>
+						      				</update-source>
+						      				<address-family>
+						      					<ipv4>
+						      						<unicast>
+						      							<route-policy>
+						      								<direction>in</direction>
+						      								<name>{route-policy-in}</name>
+						      							</route-policy>
+						      							<route-policy>
+						      								<direction>out</direction>
+						      								<name>{route-policy-out}</name>
+						      							</route-policy>
+						      						</unicast>
+						      					</ipv4>
+						      				</address-family>
+						      			</neighbor>
+						      		</vrf>
+						      	</bgp-no-instance>
+						      </bgp>
+                <?end?>
+              <?end?>
+            <?end?>
+					</router>
+        <?end?>
       </config>
     </device>
   </devices>
