--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -8,10 +8,10 @@
       <config>
         <?if {$device = /transport-information/options/settings/equipment-information/PE/hostname}?>
 				  <vrf xmlns="http://tail-f.com/ned/cisco-ios-xr">
-            <?if {/service-information/network-options/protocol = 'vpnv4'}?>
+            <?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
 				  	  <vrf-list>
-				  	  	<name>{/service-information/network-options/vpnv4/vrf}</name>
-				  	  	<rd>{/service-information/network-options/vpnv4/route-distinguisher}</rd>
+				  	  	<name>{string(/service-information/network-options/vpnv4/vrf)}</name>
+				  	  	<rd>{/service-information/network-options/vpnv4/rd}</rd>
 				  	  	<address-family>
 				  	  		<ipv4>
 				  	  			<unicast>
@@ -45,11 +45,11 @@
                 <?end?>
 								<encapsulation>
 									<dot1q>
-										<vlan-id>{/transport-information/options/settings/circuit-information/fttx/cvlan}</vlan-id>
+										<vlan-id>{string(/transport-information/options/settings/circuit-information/fttx/cvlan)}</vlan-id>
 									</dot1q>
 								</encapsulation>
-								<?if {/service-information/network-options/protocol = 'vpnv4'}?>
-									<vrf>{/service-information/network-options/vpnv4/vrf}</vrf>
+								<?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
+									<vrf>{string(/service-information/network-options/vpnv4/vrf)}</vrf>
 								<?end?>
 								<ipv4>
 								  <address>
