--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -12,7 +12,7 @@
 				  			<name>{/service-information/network-options/vpnv4/vrf}</name>
 				  			<rd>{/service-information/network-options/vpnv4/rd}</rd>
 				  			<address-family>
-				  				<ipv4>test
+				  				<ipv4>
 				  					<unicast>
 				  						<import>
 				  							<route-target>
