--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -35,6 +35,35 @@
 							  </vrf-list>
               <?end?>
 						</vrf>
+						<interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
+							<GigabitEthernet-subinterface>
+								<GigabitEthernet>
+                  <?foreach {/transport-information/options/settings/equipment-information/PE}?>
+                    <?if {$device = hostname}?>
+									    <id>{interface}</id>
+                    <?end?>
+                  <?end?>
+									<encapsulation>
+										<dot1q>
+											<vlan-id>{/transport-information/options/settings/circuit-information/fttx/cvlan}</vlan-id>
+										</dot1q>
+									</encapsulation>
+									<?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
+										<vrf>{string(/service-information/network-options/vpnv4/vrf)}</vrf>
+									<?end?>
+                  <?foreach {/service-information/service-options/ip-settings/ip/ipv4/hosts}?>
+                    <?if {$device = node}?>
+									    <ipv4>
+									    	<address>
+									    		<ip>{address}</ip>
+									    		<mask>{subnet-mask}</mask>
+									    	</address>
+									    </ipv4>
+                    <?end?>
+                  <?end?>
+								</GigabitEthernet>
+							</GigabitEthernet-subinterface>
+						</interface>
           <?end?>
         </config>
       </device>
