--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -44,7 +44,7 @@
                                 <?end?>
                                 <encapsulation>
                                     <dot1q>
-                                        <vlan-id>{/transport-information/options/settings/circuit-information/fttx/cvlan}</vlan-id>
+                                        <vlan-id>{string(/transport-information/options/settings/circuit-information/fttx/cvlan)}</vlan-id>
                                     </dot1q>
                                 </encapsulation>
                                 <?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
