--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -37,11 +37,7 @@
                     <interface xmlns="http://tail-f.com/ned/cisco-ios-xr">
                         <GigabitEthernet-subinterface>
                             <GigabitEthernet>
-                                <?foreach {/transport-information/options/settings/equipment-information}?>
-                                    <?if {$device = node}?>
-                                        <id>{interface}</id>
-                                    <?end?>
-                                <?end?>
+                                <id>{/transport-information/options/settings/equipment-information/PE/interface}</id>
                                 <encapsulation>
                                     <dot1q>
                                         <vlan-id>{string(/transport-information/options/settings/circuit-information/fttx/cvlan)}</vlan-id>
