--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -62,7 +62,7 @@
                     <vrf xmlns="urn:ios">
                         <?if {/service-information/network-options/network-protocol = 'vpnv4'}?>
                             <definition>
-                                <name>{/service-information/network-options/vpnv4/vrf}</name>
+                                <name>{string(/service-information/network-options/vpnv4/vrf)}</name>
                                 <rd>100:100</rd>
                                 <address-family>
                                     <ipv4>
