--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -69,7 +69,7 @@
                                     </ipv4>
                                 </address-family>
                             </definition>
-                        <?endif?>
+                        <?end?>
                     </vrf>
                 </config>
             </device>
