--- a/GC/templates/GC-template.xml
+++ b/GC/templates/GC-template.xml
@@ -142,6 +142,36 @@
                             <?end?>
                         </GigabitEthernet>
                     </interface>
+                    <router xmlns="urn:ios">
+                        <bgp>
+                            <?foreach {/service-information/service-options/ip-settings/routing/bgp/peer}?>
+                                <?if {$device = node}?>
+                                    <as-no>{local-asn}</as-no>
+                                    <address-family>
+                                        <with-vrf>
+                                            <ipv4>
+                                                <af>unicast</af>
+                                                <vrf>
+                                                    <name>{string(/service-information/network-options/vpnv4/vrf)}</name>
+                                                    <redistribute>
+                                                        <connected/>
+                                                    </redistribute>
+                                                    <neighbor>
+                                                        <id>{remote-address}</id>
+                                                        <remote-as>{remote-asn}</remote-as>
+                                                        <activate/>
+                                                        <update-source>
+                                                            <GigabitEthernet>{update-source}</GigabitEthernet>
+                                                        </update-source>
+                                                    </neighbor>
+                                                </vrf>
+                                            </ipv4>
+                                        </with-vrf>
+                                    </address-family>
+                                <?end?>
+                            <?end?>
+                        </bgp>
+                    </router>
                 </config>
             </device>
         <?end?>
